# halunasu

./: .dockerignore  .env.example  .gcloudignore  .gcloudignore.fee-api  .gitignore  README.md  cloudbuild.node-service.yaml  cloudbuild.platform-api.yaml  firestore.indexes.json  firestore.rules  package-lock.json  package.json  pyproject.toml
apps/: README.md
audio_treatment/: README.md
config/: cloudflare-dns-records.json  netlify-sites.json  runtime-domains.json  runtime-endpoints.json  runtime-proxy-targets.json
docs/: 20260713-care-emergency-treatment-management-app-plan.md  20260716-emergency-treatment-management-current-fee-audit.md  20260716-yamamoto-demo-stg-mockpartner.md  20260718-homis-sidecar-extension-implementation.md  fee-baseline-diff-diagnosis-2026-06-29.md  fee-baseline-diff-diagnosis-runbook.md  fee-calculation-architecture-hardening-2026-06-09.md  fee-calculation-current-flow-2026-06-15.md  fee-calculation-quality-hardening.md  fee-canonical-facts-hardening-plan-2026-06-15.md  fee-charting-diagnosis-and-data-collection-2026-06-27.md  fee-clinical-billing-knowledge-layer-2026-06-20.md  fee-competitive-analysis-and-improvements-2026-06-14.md  fee-history-linkage-and-facility-settings-plan-2026-06-27.md  fee-medical-clerk-workflow-gap-analysis-2026-06-21.md  fee-mock-homis-dataset-spec.md  fee-receipt-preview-roadmap-2026-07-04.md  fee-reimbursement-consulting-benchmark-2026-06-23.md  fee-soap-e2e-v2-1000-manual-authoring-plan.md  referral-ai-app-requirements-review-2026-06-20.md  referral-app-design-and-implementation-plan-2026-06-19.md
(+981 files in other folders)
